--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,11 @@ torchaudio = "^2.2.2"
 torchvision = "^0.17.2"
 onnxruntime = "^1.17.3"
 python-dotenv = "^1.0.1"
+gradio = "^4.26.0"
 
+
+[tool.poetry.group.dev.dependencies]
+jupyter = "^1.0.0"
 
 [build-system]
 requires = ["poetry-core"]
